z-index issue on resume.html solved

--- a/css/main.css
+++ b/css/main.css
@@ -69,8 +69,11 @@ h7 {
   top: 0;
   left: 0;
   width: 100%;
-  position: fixed;
-  z-index: 5;
+}
+
+#navmain {
+    position: fixed;
+    z-index: 5;
 }
 
 .bg-white {
